# aoc

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
aoc/: config.py  hello_world.py
aoc/day1/: template.py
aoc/day10/: syntax_checker.py  template.py
aoc/day11/: template.py
aoc/day12/: template.py
aoc/day13/: folding.py  template.py
aoc/day14/: polymerization.py  template.py
aoc/day15/: template.py
aoc/day16/: template.py
aoc/day17/: template.py
aoc/day18/: template.py
aoc/day19/: template.py
aoc/day2/: template.py
aoc/day20/: template.py
aoc/day21/: template.py
aoc/day22/: template.py
aoc/day23/: template.py
aoc/day24/: template.py
aoc/day3/: template.py
aoc/day4/: bingo.py  choices.py
aoc/day5/: vents.py
aoc/day6/: lanternfishes.py
aoc/day7/: crabs_position.py
aoc/day8/: broken_signals.py
aoc/day9/: heights_risk.py
aoc/io/: data_load.py
