[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_third_party = []

[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Danny Stumpe <danny.stumpe@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7.9"
black = "20.8b1"
isort = "^5.10.1"
pytest = "5.2"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.7.9"
flake8-eradicate = "0.3.0"
mypy = "0.770"
pre-commit = "2.2.0"
pydocstyle = "5.0.2"
notebook = "^6.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
